src/test/deca/context/valid/SansObjet/DeclVar-Div-float-int-float.deca
// Description:
//    Declaration of a float variable using / operation between a int variable and float .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  2; 
    float y = 1.5; 
    float z = x / y ; 
}
