src/test/deca/context/invalid/SansObjet/DeclVar-Or-int-float-string.deca
// Description:
//    Declaration of a int variable using || operation between a float variable and string .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  10.01; 
    string y = "Everyone"; 
    int z = x || y ; 
}
